--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-# Plugin properties
-maven_group=me.duncanruns.julti.exampleplugin
+archives_name=priority-plugin
 plugin_version=1.0.0
-archives_base_name=julti-example-plugin
+maven_group=dev.tildejustin.priority
